fixed the issues with the remember me and forgot password misaligning depending on size of the screen

--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -7,16 +7,14 @@
     justify-content: center;
 }
 
-.form-check {
-    padding-left: 2.3rem;
+.login-options {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.remember-me {
-    padding-left: 37vh;
-}
-
-.forgot-password {
-    padding-left: 27vh;
+.login-options .form-check {
+    margin: 0;
 }
 
 .forgotPassword {
